[package]
name = "terra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
dht-hal-drv = "0.2.2"
embedded-hal = { version="0.2.3", features = ["unproven"]}
void = "1.0.2"
spin_sleep = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.0"
